cmake_minimum_required(VERSION 2.8)
project(pegpig)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -fno-rtti -fno-exceptions -Wno-unused-variable -msse4 -O3")
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -ferror-limit=4")
endif()
add_executable(calc calc.cpp)
add_executable(json json.cpp)
add_executable(sexp sexp.cpp)
add_executable(pp pp.cpp)
